# StartingXI

./: .gitignore  CMakeLists.txt  README.md  StartingXI.sln
MysteriousGame/: CMakeLists.txt  MysteriousGame.cpp  MysteriousGame.vcxproj
MysteriousGame/include/: ECSSettings.h
MysteriousGame/scripts/: compile.ps1  compile_shaders  compile_shaders.py
MysteriousGame/shaders/: basic.frag  basic.vert  basic_lighting.frag  basic_lighting.vert  triangle.vert
MysteriousGame/src/: MysteriousGame.cpp  PathfindingTestApp.cpp
SXICore/: CMakeLists.txt  File.cpp  File.h  SXICore.vcxproj  Timing.cpp  Timing.h
SXICore/include/SXICore/: ECS.h  Exception.h  File.h  MPL.h  Types.h
SXICore/include/SXICore/ECS/: ECS.h  Entity.h  Manager.h  Settings.h
SXICore/include/SXICore/ECS/detail/: ArchetypeStorage.h
SXICore/include/SXICore/MPL/: Contains.h  Count.h  Filter.h  IndexOf.h  IsSame.h  IsSubset.h  Macros.h  Map.h  PushFront.h  Rename.h  Repeat.h  Tuple.h  Type.h  TypeList.h  TypeListOperations.h
SXICore/include/SXICore/components/: PositionComponent.h  YRotationComponent.h
SXICore/src/: File.cpp
SXIMath/: AABB.cpp  AABB.h  CMakeLists.txt  Line.cpp  Line.h  Mat.h  SXIMath.vcxproj  Vec.h
SXIMath/include/SXIMath/: Line.h  Mat.h
SXIMath/src/: AABB.cpp
SXIPathfinding/: CDT.cpp  CDT.h  CMakeLists.txt  Map.cpp  Map.h  MapShape.cpp  MapShape.h  PolyAnya.cpp  PolyAnya.h  RStarTree.cpp  RStarTree.h  SXIPathfinding.vcxproj
SXIPathfinding/include/SXIPathfinding/: CDT.h  Map.h  MapShape.h  PolyAnya.h  RStarTree.h
SXIPathfinding/src/: CDT.cpp  Map.cpp  MapShape.cpp  PolyAnya.cpp  RStarTree.cpp
SXIRenderer/: CMakeLists.txt  Model.cpp  Model.h  Renderer.cpp  Renderer.h  SXIRenderer.vcxproj  Texture.cpp  Texture.h  Window.cpp  Window.h
SXIRenderer/include/SXIRenderer/: Model.h  Renderer.h  Renderer2.h  Scene.h  Texture.h
SXIRenderer/include/SXIRenderer/components/: RenderComponent.h
SXIRenderer/include/SXIRenderer/detail/: Buffer.h  Context.h  GraphicsPipeline.h  RenderPass.h  Utils.h  Window.h  Window2.h
SXIRenderer/include/SXIRenderer/tags/: LightTag.h
SXIRenderer/src/: Model.cpp  Renderer.cpp  Renderer2.cpp  Scene.cpp  Texture.cpp  Window.cpp
SXIRenderer/src/detail/: Buffer.cpp  Context.cpp  GraphicsPipeline.cpp  RenderPass.cpp  Utils.cpp  Window.cpp  Window2.cpp
scripts/: compile_shaders.py
